tests/golden/type_errors/struct_method_this_parameter.cd
struct Person { name: string }

impl Person {
  fun bad(this: string): string { return this; }
}
